--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,18 @@
 	<groupId>com.of.code</groupId>
 	<artifactId>advent2020</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<name>hooha</name>
 	<description>hooohaaaaaaaa!</description>
 	<dependencies>
@@ -19,4 +31,19 @@
 			<version>3.11</version>
 		</dependency>
 	</dependencies>
+
+<!--    <build>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<version>3.8.0</version>-->
+<!--				<configuration>-->
+<!--					<source>11</source>-->
+<!--					<target>11</target>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build>-->
+
 </project>
